--- a/schnarchen/index.html
+++ b/schnarchen/index.html
@@ -747,7 +747,10 @@
 
     </div>
 </footer>
-
+<a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
+    class="inline-block md:hidden shadow-none no-underline rounded leading-[2rem] bg-green-500 hover:bg-green-600 text-white py-3 mt-4 text-[19px] rounded-none sticky bottom-0 w-full text-center">
+    VERFÜGBARKEIT PRÜFEN
+</a>
 
 
 <div class="fixed bottom-0 left-0 right-0 bg-gray-100 p-2 text-black text-center text-sm">
