--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -121,7 +121,7 @@
 
                 <!-- Header -->
                 <header class="my-8 text-center">
-                    <h1 class="mb-2 text-4xl font-bold leading-tight text-gray-900 md:text-5xl">
+                    <h1 class="mb-2 text-3xl font-bold leading-tight text-gray-900 md:text-5xl">
                         Ich hätte fast im Schlaf aufgehört zu atmen – und sie war live dabei.
                     </h1>
                     <p class="text-lg text-gray-700 mt-2 md:mt-4">
@@ -775,6 +775,10 @@
     </div>
 </footer>
 
+<a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
+    class="inline-block md:hidden shadow-none no-underline rounded leading-[2rem] bg-green-500 hover:bg-green-600 text-white py-3 mt-4 text-[19px] rounded-none sticky bottom-0 w-full text-center">
+    VERFÜGBARKEIT PRÜFEN
+</a>
 </body>
 
 </html>
