--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -551,7 +551,7 @@
 
 
             <div class="max-w-3xl px-4 py-8 mx-auto">
-                <h2 class="mb-4 text-2xl font-bold">Kommentare von echten Kund:innen</h2>
+                <h2 class="mb-4 text-2xl font-bold">Echte Erfahrungen mit Derila Ergo</h2>
                 <div id="comment-section">
 
                     <!-- Kommentar 1 -->
