--- a/schnarchen/index.html
+++ b/schnarchen/index.html
@@ -233,7 +233,7 @@
                 <h2 class="my-10 text-4xl font-bold">Was mit harmlosem Schnarchen begann – wurde lebensbedrohlich
                 </h2>
                 <!-- Video -->
-                <div class="my-6">
+                <div class="my-6 hidden md:block">
                     <video autoplay loop muted class="w-80 h-[150px] object-cover">
                         <source src="https://vidads.s3.us-east-1.amazonaws.com/apnea-video.mp4" type="video/mp4" />
                     </video>
@@ -544,7 +544,7 @@
 
 
             <div class="max-w-3xl px-4 py-8 mx-auto">
-                <h2 class="mb-4 text-2xl font-bold">Kommentare von echten Kund:innen</h2>
+                <h2 class="mb-4 text-2xl font-bold">Echte Erfahrungen mit Derila Ergo</h2>
                 <div id="comment-section">
 
                     <!-- Kommentar 1 -->
