--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -235,7 +235,7 @@
                 <h2 class="my-10 text-4xl font-bold">Was mit harmlosem Schnarchen begann – wurde lebensbedrohlich
                 </h2>
                 <!-- Video -->
-                <div class="my-6">
+                <div class="my-6 hidden md:block">
                     <video autoplay loop muted class="w-80 h-[150px] object-cover">
                         <source src="https://vidads.s3.us-east-1.amazonaws.com/apnea-video.mp4" type="video/mp4" />
                     </video>
