--- a/schnarchen/index.html
+++ b/schnarchen/index.html
@@ -513,7 +513,8 @@
                     </p>
                     <div
                         class="px-4 py-3 mt-4 text-center text-red-700 bg-red-100 border border-red-300 rounded-lg urgency-badge">
-                        <strong>NUR NOCH 23 STÜCK AUF LAGER!</strong> - Letzte Chance auf Rabatt
+                        <a href="https://trk.mein-derila.de/click"> <strong>NUR NOCH 23 STÜCK AUF LAGER!</strong> -
+                            Letzte Chance auf Rabatt</a>
                     </div>
                 </div>
 
