--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -517,10 +517,14 @@
                         wieder
                         verfügbar ist.
                     </p>
-                    <div
-                        class="px-4 py-3 mt-4 text-center text-red-700 bg-red-100 border border-red-300 rounded-lg urgency-badge">
-                        <strong>NUR NOCH 23 STÜCK AUF LAGER!</strong> - Letzte Chance auf Rabatt
-                    </div>
+                    <a
+                        href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]">
+                        <div id="cta-button"
+                            class="px-4 py-3 mt-4 text-center text-red-700 bg-red-100 border border-red-300 rounded-lg urgency-badge">
+
+                            23 STÜCK AUF LAGER!</strong> - Letzte Chance auf Rabatt
+                        </div>
+                    </a>
                 </div>
 
                 <section class="bg-blue-100 p-6 rounded shadow-md mb-8">
