--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -411,7 +411,7 @@
                                     alt="User Photo" />
                                 <div>
                                     <span class="font-semibold block">Britta Wagner</span>
-                                    <span class="text-gray-500 text-sm">Nach zwei Tagen</span>
+                                    <span class="text-gray-500 text-sm">vor zwei Tagen</span>
                                 </div>
                             </div>
                             <div class="pl-[52px]">
@@ -430,7 +430,7 @@
                                     alt="User Photo" />
                                 <div>
                                     <span class="font-semibold block">Janna Koch</span>
-                                    <span class="text-gray-500 text-sm">Nach zwei Tagen</span>
+                                    <span class="text-gray-500 text-sm">vor zwei Tagen</span>
                                 </div>
                             </div>
                             <div class="pl-[52px]">
@@ -450,7 +450,7 @@
                                     alt="User Photo" />
                                 <div>
                                     <span class="font-semibold block">Ben Jonas</span>
-                                    <span class="text-gray-500 text-sm">Nach einem Tag</span>
+                                    <span class="text-gray-500 text-sm">vor einem Tag</span>
                                 </div>
                             </div>
                             <div class="pl-[52px]">
