--- a/schnarchen/index.html
+++ b/schnarchen/index.html
@@ -406,7 +406,7 @@
                                     alt="User Photo" />
                                 <div>
                                     <span class="font-semibold block">Britta Wagner</span>
-                                    <span class="text-gray-500 text-sm">Nach zwei Tagen</span>
+                                    <span class="text-gray-500 text-sm">vor zwei Tagen</span>
                                 </div>
                             </div>
                             <div class="pl-[52px]">
@@ -425,7 +425,7 @@
                                     alt="User Photo" />
                                 <div>
                                     <span class="font-semibold block">Janna Koch</span>
-                                    <span class="text-gray-500 text-sm">Nach zwei Tagen</span>
+                                    <span class="text-gray-500 text-sm">vor zwei Tagen</span>
                                 </div>
                             </div>
                             <div class="pl-[52px]">
@@ -445,7 +445,7 @@
                                     alt="User Photo" />
                                 <div>
                                     <span class="font-semibold block">Ben Jonas</span>
-                                    <span class="text-gray-500 text-sm">Nach einem Tag</span>
+                                    <span class="text-gray-500 text-sm">vor einem Tag</span>
                                 </div>
                             </div>
                             <div class="pl-[52px]">
