--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -542,7 +542,7 @@
                     <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
                         id="cta-button"
                         class="mt-4 inline-block bg-blue-600 text-white py-3 px-6 rounded hover:bg-blue-700 font-bold text-lg">👉
-                        Jetzt 70 % Rabatt sichern</a>
+                        Jetzt Verfügbarkeit überprüfen</a>
                 </section>
             </div>
 
@@ -693,7 +693,7 @@
                 <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
                     id="cta-button"
                     class="inline-block btn shadow-none no-underline rounded-lg leading-normal bg-purple-600 hover:bg-purple-700 py-3 text-white w-full mb-1 text-center font-bold transition-colors duration-200">
-                    JETZT TESTEN ➢ ➢
+                    Verfügbarkeit überprüfen ➢ ➢
                 </a>
 
                 <!-- Payment icons -->
