--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -122,7 +122,9 @@
                 <!-- Header -->
                 <header class="my-8 text-center">
                     <h1 class="mb-2 text-3xl font-bold leading-tight text-gray-900 md:text-5xl">
-                        Ich hätte fast im Schlaf aufgehört zu atmen – und sie war live dabei.
+                        <!-- Ich hätte fast im Schlaf aufgehört zu atmen – und sie war live dabei. -->
+                        Mein Schnarchen war so laut, dass meine Frau ins Gästezimmer zog
+
                     </h1>
                     <p class="text-lg text-gray-700 mt-2 md:mt-4">
                         Wie ein Kissen meine Atemaussetzer stoppte – und meine Beziehung rettete.
@@ -203,7 +205,7 @@
 
 
                 <!-- Story Intro Section -->
-                <article class="prose max-w-none">
+                <!-- <article class="prose max-w-none">
                     <p>Diese Nacht werde ich nie vergessen. Meine Frau rüttelte mich panisch wach.</p>
 
                     <p class="mt-2 italic">„Du hast wieder nicht geatmet“, flüsterte sie mit zitternder Stimme.</p>
@@ -215,7 +217,24 @@
 
                     <p class="mt-4 font-semibold text-red-600">Rückblickend war es nie einfach nur Schnarchen. Es war
                         ein stummer Hilferuf – mein Körper kämpfte um Luft.</p>
+                </article> -->
+
+                <!-- Story Intro Section -->
+                <article class="prose max-w-none">
+                    <p>Erst war es ein Witz zwischen uns.</p>
+
+                    <p class="mt-2">„Du sägst den ganzen Wald um“, sagte sie oft lachend.</p>
+
+                    <p class="mt-4">Aber irgendwann… wurde es ernst.</p>
+
+                    <p>Sie schlief kaum noch. Ich wachte sabbernd, mit trockenem Mund und Druck auf der Brust auf.</p>
+
+                    <p class="mt-4 italic">Bis sie eines Abends sagte: „Ich schlafe heute im Gästezimmer… ich brauche
+                        Ruhe.“</p>
+
+                    <p class="mt-4">In diesem Moment wusste ich: Ich muss etwas ändern.</p>
                 </article>
+
 
 
 
@@ -240,7 +259,7 @@
                         <source src="https://vidads.s3.us-east-1.amazonaws.com/apnea-video.mp4" type="video/mp4" />
                     </video>
                 </div>
-                <p>Ich dachte, Schnarchen wäre einfach nur nervig. Laut – aber harmlos.</p>
+                <!-- <p>Ich dachte, Schnarchen wäre einfach nur nervig. Laut – aber harmlos.</p>
                 <p>Aber dann kamen diese Nächte…</p>
                 <p>Ich wachte mit trockenem Mund und Druck auf der Brust auf.</p>
                 <p>Meine Frau sagte, ich würde im Schlaf nach Luft ringen.</p>
@@ -263,7 +282,30 @@
                     <li>CPAP-Gerät? Laut, unbequem – nach 3 Nächten im Keller verstaut</li>
                     <li>Mundstücke, Kinnriemen, Schlafsprays – nichts half</li>
                     <li>Ein Spezialist schlug sogar eine Operation vor – mit OP-Risiko</li>
+                </ul> -->
+
+                <p>Ich dachte, Schnarchen wäre einfach nur nervig. Laut – aber harmlos.</p>
+                <p>Doch dann wurde daraus ein echtes Problem…</p>
+                <p>Meine Frau konnte nicht mehr durchschlafen – und ich wachte sabbernd mit trockenem Mund und Druck auf
+                    der Brust auf.</p>
+                <p>Sie sagte, ich würde nachts nach Luft schnappen. Ich selbst bekam davon kaum etwas mit.</p>
+                <p>Tagsüber war ich wie erschlagen – gereizt, unkonzentriert, fertig.</p>
+
+                <ul class="list-disc list-inside mt-4 space-y-2">
+                    <li>Meine Frau zog ins Gästezimmer – sie konnte einfach nicht mehr</li>
+                    <li>Ich schlief oft im Sitzen, weil Liegen sich schlimmer anfühlte</li>
+                    <li>Ich fühlte mich wie ein Fremder im eigenen Zuhause</li>
+                    <li>Ich sah älter aus, meine Energie war komplett weg</li>
                 </ul>
+
+                <h2 class="text-4xl font-bold my-10">Ich probierte ALLES – aber nichts half wirklich</h2>
+                <ul class="list-disc list-inside space-y-2">
+                    <li>300 € Kissen aus dem Internet – zu weich, zu heiß, keine Besserung</li>
+                    <li>CPAP-Gerät: laut, unbequem, einschüchternd – nach 3 Tagen im Schrank gelandet</li>
+                    <li>Sprays, Schienen, Kinnriemen – maximal Placebo</li>
+                    <li>Ein HNO wollte mir sogar den Rachen lasern – kam für mich nicht infrage</li>
+                </ul>
+
 
 
                 <div class="my-8 bg-yellow-50 border-l-4 border-yellow-500 p-5 shadow-md rounded-md">
