--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -127,7 +127,7 @@
 
                     </h1>
                     <p class="text-lg text-gray-700 mt-2 md:mt-4">
-                        Wie ein Kissen meine Atemaussetzer stoppte – und meine Beziehung rettete.
+                        Ich dachte, wir brauchen eine Paartherapie – aber es reichte, mein Kissen zu wechseln.
                     </p>
                 </header>
 
@@ -349,15 +349,28 @@
                 <!-- Wiedervereinigung -->
                 <section class="my-10">
                     <h2 class="text-4xl font-bold mb-4">Und meine Frau? Sie kam zurück ins Bett.</h2>
-                    <p>Sie sagte: <span class="italic">„Ich hab dich zum ersten Mal wieder ruhig schlafen
-                            gehört.“</span></p>
-                    <p>Wir reden wieder mehr. Lachen mehr. Schlafen besser – zusammen.</p>
+                    <p class="mb-2">Ich hätte nie gedacht, dass es sie so sehr belastet. Ich dachte, sie übertreibt – es
+                        sei doch nur Schnarchen.</p>
+                    <p class="mb-2">Aber in Wirklichkeit fühlte sie sich nicht gehört, nicht gesehen. Jede Nacht war für
+                        sie Stress. Für uns beide.</p>
+                    <p class="mb-4">Und dann, nach nur wenigen Nächten mit dem neuen Kissen, sagte sie diesen einen
+                        Satz:</p>
+                    <p class="italic text-xl text-red-600 font-semibold mb-4">„Ich hab dich zum ersten Mal wieder ruhig
+                        schlafen gehört.“</p>
+                    <p>Seitdem ist alles anders. Wir reden wieder mehr. Lachen mehr. Schlafen besser – zusammen.</p>
                 </section>
 
+                <!-- Emotionaler CTA -->
                 <div class="text-center mt-10">
-                    <a href="https://get-derila-ergo.com/..." id="cta-button"
+                    <p class="text-lg mb-4">
+                        Wenn du das Gefühl hast, dass dein Schnarchen mehr kaputtmacht, als du dir selbst eingestehen
+                        willst –
+                        dann warte nicht länger. Bei mir hat eine so kleine Veränderung alles verändert.
+                    </p>
+                    <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
+                        id="cta-button"
                         class="inline-block bg-red-400 hover:bg-red-500 text-white text-lg font-bold py-4 px-8 rounded-lg shadow-md transition">
-                        ❤️ Für dich. Für sie. Für euch. – Jetzt Derila Ergo sichern
+                        ❤️ Jetzt sichern & wieder gemeinsam durchschlafen
                     </a>
                     <p class="mt-2 text-sm italic text-gray-600">Nur solange der Vorrat reicht</p>
                 </div>
@@ -371,30 +384,34 @@
 
 
 
-                <h2 class="text-2xl font-bold mt-10">Darum funktioniert Derila tatsächlich</h2>
+
+                <h2 class="text-2xl font-bold mt-20">Darum funktioniert Derila tatsächlich</h2>
 
 
 
-                <p class="mb-4">Mein Arzt war erst skeptisch – wie sollte ein Kissen helfen, wo teure
-                    Medizinprodukte fehlschlugen? Doch nachdem er sich mit dem Design von Derila beschäftigt
-                    hatte, begann er, es seinen anderen Patienten mit Schlafapnoe zu empfehlen.</p>
 
-                <div class="text-center mb-8">
+
+                <!-- <div class="text-center mb-8">
                     <a class="block mt-4"
                         href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]">
                         <img class="w-full  mx-auto" src="/img/apnea-10.jpg" alt="image" />
                     </a>
-                </div>
+                </div> -->
 
-                <h3 class="text-xl font-bold mb-2">Das Geheimnis liegt in der Schmetterlingsform.</h3>
-                <p class="mb-4">Im Gegensatz zu normalen Kissen, bei denen der Kopf zurückfällt und die Atemwege
-                    zusammendrückt, hält Derila Ihren Hals perfekt ausgerichtet. So wird verhindert, dass die
-                    Halsmuskeln zusammenbrechen – die Hauptursache für Schlafapnoe und Schnarchen.</p>
-                <p class="mb-4">Der Memory-Schaum mit hoher Dichte ist ein weiterer Durchbruch. Er sorgt für
-                    beständige Unterstützung die ganze Nacht lang, sodass Ihre Atemwege geöffnet bleiben, selbst
-                    wenn Sie sich hin- und herwälzen. Und dank seiner kühlenden Technologie wachen Sie nicht
-                    verschwitzt auf.</p>
+                <p class=" font-bold my-2">Ich glaubte ehrlich nicht, dass ein Kissen sowas bewirken kann.
+                    Aber dann hab ich verstanden, warum:</p>
 
+                <ul class="list-disc list-inside my-4 space-y-1">
+                    <li class="font-bold">👉 Die Form hält meinen Hals genau da, wo er atmen kann
+                    </li>
+                    <li class="font-bold">👉 Der Schaum stützt, auch wenn ich mich drehe
+                    </li>
+                    <li class=" font-bold">👉 Und mein Arzt? Er empfahl es jetzt sogar seinen anderen Apnoe-Patienten
+
+                    </li>
+                </ul>
+                <o>Kein Schlauch. Kein Summen. Kein Druckgefühl.
+                    Nur ein Kissen, das für mich kämpft – jede Nacht.</o>
                 <div class="text-center mb-8">
                     <a class="block mt-8" id="cta-button"
                         href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]">
