--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -645,7 +645,7 @@
 
 
 
-        <div class="fixed bottom-0 left-0 right-0 bg-gray-100 p-2 text-black text-center text-sm">
+        <!-- <div class="fixed bottom-0 left-0 right-0 bg-gray-100 p-2 text-black text-center text-sm">
             <p>
                 Wir verwenden nur technisch notwendige Cookies.
                 <a href="https://get-derila-ergo.com/derila-ergo/privacy?l=de&vndr=evf&evf=1&uuid=01982e57-b4b4-71c2-a8a8-262f6c919b6e&offid=78&affiliate_id=1441&c=&hj=1&gae=1&sruep=1&ppdf=credit&_=9662%2C8886%2C2624%2C4288%2C6341%2C7399&dehiv=1&subid=cmc4002515556"
@@ -654,7 +654,7 @@
             <button onclick="this.parentElement.style.display='none'" class="mt-1 px-2 py-1 bg-gray-200 rounded">
                 Verstanden
             </button>
-        </div>
+        </div> -->
     </div>
 </footer>
 
