--- a/schnarchen/index.html
+++ b/schnarchen/index.html
@@ -576,7 +576,7 @@
                 <!-- Main button for the Sidebar -->
                 <a href="https://trk.mein-derila.de/click" id="cta-button"
                     class="inline-block btn shadow-none no-underline rounded-lg leading-normal bg-purple-600 hover:bg-purple-700 py-3 text-white w-full mb-1 text-center font-bold transition-colors duration-200">
-                    Verfügbarkeit überprüfen ➢ ➢
+                    JETZT PROBIEREN >>
                 </a>
 
                 <!-- Payment icons -->
