--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -191,7 +191,7 @@
 
 
                 <section class="my-10">
-                    <h2 class="text-3xl md:text-4xl font-bold mb-4">Ich probierte alles – aber nichts half wirklich</h2>
+                    <h2 class="text-3xl md:text-4xl font-bold mb-4">Ich probierte alles – aber nichts hat geholfen</h2>
                     <ul class="list-disc list-inside space-y-2 text-lg md:text-xl text-gray-800">
                         <li>300 € Kissen aus dem Internet – zu weich, zu heiß, keine Besserung</li>
                         <li>CPAP-Gerät: laut, unbequem, einschüchternd – nach 3 Tagen im Schrank gelandet</li>
