--- a/schnarchen/index.html
+++ b/schnarchen/index.html
@@ -124,10 +124,13 @@
 
                 <header class="my-10 text-center">
                     <h1 class="mb-4 text-4xl md:text-6xl font-bold leading-tight text-gray-900">
-                        Mein Schnarchen war so laut, dass meine Frau ins Gästezimmer zog
+                        <!-- Mein Schnarchen war so laut, dass meine Frau ins Gästezimmer zog -->
+                        Sie kam zurück ins Bett -dank diesem Kissen.
                     </h1>
                     <p class="text-xl md:text-2xl text-gray-800 mt-4 leading-snug max-w-3xl mx-auto">
-                        Ich dachte, wir brauchen eine Paartherapie – aber es reichte, mein Kissen zu wechseln.
+                        <!-- Ich dachte, wir brauchen eine Paartherapie – aber es reichte, mein Kissen zu wechseln. -->
+                        Meine Frau hörte mich zum ersten Mal wieder ruhig schlafen – Wie ein ergonomisches
+                        Butterfly-Kissen unsere Beziehung rettete. Jetzt mit 70% Rabatt.
                     </p>
                 </header>
 
