--- a/schnarchen/index.html
+++ b/schnarchen/index.html
@@ -491,7 +491,7 @@
                     <!-- CTA Button -->
                     <div class="mt-10 text-center">
                         <a href="https://trk.mein-derila.de/click" id="cta-button"
-                            class="inline-block px-6 py-3 text-base font-bold text-white transition duration-300 bg-green-600 rounded-lg shadow-md hover:bg-green-700">
+                            class="inline-block w-full px-6 py-3 text-base font-bold text-white transition duration-300 bg-green-600 rounded-lg shadow-md hover:bg-green-700">
                             👉 Jetzt Derila Ergo sichern
                         </a>
                         <p class="mt-2 text-xs italic text-gray-600">Solange der Vorrat reicht</p>
@@ -538,7 +538,7 @@
                             <li>✔️ Frisch & klar aufwachen – wie früher</li>
                         </ul>
                         <a href="https://trk.mein-derila.de/click" id="cta-button"
-                            class="mt-4 inline-block bg-blue-600 text-white py-3 px-6 rounded hover:bg-blue-700 font-bold text-lg md:text-xl">
+                            class="mt-4 inline-block bg-blue-600 w-full text-center text-white py-3 px-6 rounded hover:bg-blue-700 font-bold text-lg md:text-xl">
                             👉 Jetzt Verfügbarkeit prüfen
                         </a>
                     </section>
