--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -482,7 +482,7 @@
                     <div class="mt-10 text-center">
                         <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
                             id="cta-button"
-                            class="inline-block w-full px-2 py-6 text-base font-bold text-white transition duration-300 bg-green-600 rounded-lg shadow-md hover:bg-green-700">
+                            class="inline-block w-full px-2 py-6 text-xl font-bold text-white transition duration-300 bg-green-600 rounded-lg shadow-md hover:bg-green-700">
                             👉 Jetzt Derila Ergo sichern
                         </a>
                         <p class="mt-2 text-xs italic text-gray-600">Solange der Vorrat reicht</p>
@@ -531,7 +531,7 @@
                         </ul>
                         <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
                             id="cta-button"
-                            class="mt-4 inline-block text-center w-full bg-blue-600 text-white py-3 px-6 rounded hover:bg-blue-700 font-bold text-lg md:text-xl">
+                            class="mt-4 inline-block text-center w-full bg-blue-600 text-white py-5 px-6 rounded hover:bg-blue-700 font-bold text-lg md:text-xl">
                             👉 Jetzt Verfügbarkeit prüfen
                         </a>
                     </section>
