--- a/schnarchen/index.html
+++ b/schnarchen/index.html
@@ -7,43 +7,12 @@
     <title>Mein Schnarchen war so laut, dass meine Frau ins Gästezimmer zog</title>
 
 
-    <meta http-equiv="delegate-ch"
-        content="sec-ch-ua https://trk.mein-derila.de; sec-ch-ua-mobile https://trk.mein-derila.de; sec-ch-ua-arch https://trk.mein-derila.de; sec-ch-ua-model https://trk.mein-derila.de; sec-ch-ua-platform https://trk.mein-derila.de; sec-ch-ua-platform-version https://trk.mein-derila.de; sec-ch-ua-bitness https://trk.mein-derila.de; sec-ch-ua-full-version-list https://trk.mein-derila.de; sec-ch-ua-full-version https://trk.mein-derila.de">
-    <style>
-        .dtpcnt {
-            opacity: 0;
-        }
-    </style>
-    <script>
-        (function (d, c, k, l, r, t, g, u, A, e, m, v, B, a, n, p, h, q, w, D, x) {
-            function y() { for (var f = c.querySelectorAll(".dtpcnt"), b = 0, a = f.length; b < a; b++)f[b][u] = f[b][u].replace(/(^|\s+)dtpcnt($|\s+)/g, "") } function C(a, b, d, e) { var f = new Date; f.setTime(f.getTime() + (e || 864E5)); c.cookie = a + "=" + b + "; " + d + "samesite=Strict; expires=" + f.toGMTString() + "; path=/"; k.setItem(a, b); k.setItem(a + "-expires", f.getTime()) } function z(a) {
-                var b = c.cookie.match(new RegExp("(^| )" + a + "=([^;]+)")); return b ? b.pop() : k.getItem(a + "-expires") && +k.getItem(a +
-                    "-expires") > (new Date).getTime() ? k.getItem(a) : null
-            } x = "https:" === d.location.protocol ? "secure; " : ""; d[e] || (d[e] = function () { (d[e].q = d[e].q || []).push(arguments) }, p = c[r], c[r] = function () { p && p.apply(this, arguments); if (d[e] && !d[e].hasOwnProperty("params") && /loaded|interactive|complete/.test(c.readyState)) for (; a = c[t][m++];)/\/?click\/?($|(\/[0-9]+)?$)/.test(a.pathname) && (a[g] = "javascrip" + d.postMessage.toString().slice(4, 5) + ":" + e + '.l="' + a[g] + '",void 0') }, setTimeout(function () {
-                (q = /[?&]cpid(=([^&#]*)|&|#|$)/.exec(d.location.href)) &&
-                    q[2] && (h = q[2], w = z("vl-" + h)); var f = z("vl-cep"), b = location[g]; if ("savedCep" === B && f && (!h || "undefined" === typeof h) && 0 > b.indexOf("cep=")) { var e = -1 < b.indexOf("?") ? "&" : "?"; b += e + f } a = c.createElement("script"); n = c.scripts[0]; a.defer = 1; a.src = v + (-1 === v.indexOf("?") ? "?" : "&") + "lpref=" + l(c.referrer) + "&lpurl=" + l(b) + "&lpt=" + l(c.title) + "&vtm=" + (new Date).getTime() + (w ? "&uw=no" : ""); a[A] = function () { for (m = 0; a = c[t][m++];)/dtpCallback\.l/.test(a[g]) && (a[g] = decodeURIComponent(a[g]).match(/dtpCallback\.l="([^"]+)/)[1]); y() };
-                n.parentNode.insertBefore(a, n); h && C("vl-" + h, "1", x)
-            }, 0), setTimeout(y, 7E3))
-        })(window, document, localStorage, encodeURIComponent, "onreadystatechange", "links", "href", "className", "onerror", "dtpCallback", 0, "https://trk.mein-derila.de/d/.js", "savedCep");
-    </script>
-    <noscript>
-        <link href="https://trk.mein-derila.de/d/.js?noscript=true&lpurl=" rel="stylesheet" />
-    </noscript>
+
 
     <link rel="preload" as="image" href="../img/desperatewife.webp" type="image/webp">
 
 
-    <!-- Hotjar Tracking Code for Site 6474202 (name missing) -->
-    <script>
-        (function (h, o, t, j, a, r) {
-            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
-            h._hjSettings = { hjid: 6474202, hjsv: 6 };
-            a = o.getElementsByTagName('head')[0];
-            r = o.createElement('script'); r.async = 1;
-            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
-    </script>
+
 
     <link rel="stylesheet" href="/fonts/open-sans.css" />
 
@@ -162,12 +131,15 @@
                     </div>
 
 
-                    <div
-                        class="w-full max-w-3xl mx-auto mb-10 rounded shadow-md aspect-[16/10] relative overflow-hidden">
+                    <div class="w-full max-w-3xl mx-auto mb-10 rounded shadow-md overflow-hidden relative"
+                        style="aspect-ratio: 16 / 10;">
                         <img src="/img/desperatewife.webp"
-                            alt="Hero-Bild: Frau liegt entspannt mit ergonomischem Kissen" decoding="async"
-                            fetchpriority="high" class="absolute inset-0 w-full h-full object-cover" />
+                            alt="Hero-Bild: Frau liegt entspannt mit ergonomischem Kissen" width="800" height="500"
+                            decoding="async" loading="eager" fetchpriority="high"
+                            class="absolute inset-0 w-full h-full object-cover" />
                     </div>
+
+
 
 
 
@@ -703,6 +675,42 @@
         class="inline-block md:hidden shadow-none no-underline rounded leading-[2rem] bg-green-500 hover:bg-green-600 text-white py-3 mt-4 text-[19px] rounded-none sticky bottom-0 w-full text-center">
         VERFÜGBARKEIT PRÜFEN
     </a>
+
+
+    <meta http-equiv="delegate-ch"
+        content="sec-ch-ua https://trk.mein-derila.de; sec-ch-ua-mobile https://trk.mein-derila.de; sec-ch-ua-arch https://trk.mein-derila.de; sec-ch-ua-model https://trk.mein-derila.de; sec-ch-ua-platform https://trk.mein-derila.de; sec-ch-ua-platform-version https://trk.mein-derila.de; sec-ch-ua-bitness https://trk.mein-derila.de; sec-ch-ua-full-version-list https://trk.mein-derila.de; sec-ch-ua-full-version https://trk.mein-derila.de">
+    <style>
+        .dtpcnt {
+            opacity: 0;
+        }
+    </style>
+    <script>
+        (function (d, c, k, l, r, t, g, u, A, e, m, v, B, a, n, p, h, q, w, D, x) {
+            function y() { for (var f = c.querySelectorAll(".dtpcnt"), b = 0, a = f.length; b < a; b++)f[b][u] = f[b][u].replace(/(^|\s+)dtpcnt($|\s+)/g, "") } function C(a, b, d, e) { var f = new Date; f.setTime(f.getTime() + (e || 864E5)); c.cookie = a + "=" + b + "; " + d + "samesite=Strict; expires=" + f.toGMTString() + "; path=/"; k.setItem(a, b); k.setItem(a + "-expires", f.getTime()) } function z(a) {
+                var b = c.cookie.match(new RegExp("(^| )" + a + "=([^;]+)")); return b ? b.pop() : k.getItem(a + "-expires") && +k.getItem(a +
+                    "-expires") > (new Date).getTime() ? k.getItem(a) : null
+            } x = "https:" === d.location.protocol ? "secure; " : ""; d[e] || (d[e] = function () { (d[e].q = d[e].q || []).push(arguments) }, p = c[r], c[r] = function () { p && p.apply(this, arguments); if (d[e] && !d[e].hasOwnProperty("params") && /loaded|interactive|complete/.test(c.readyState)) for (; a = c[t][m++];)/\/?click\/?($|(\/[0-9]+)?$)/.test(a.pathname) && (a[g] = "javascrip" + d.postMessage.toString().slice(4, 5) + ":" + e + '.l="' + a[g] + '",void 0') }, setTimeout(function () {
+                (q = /[?&]cpid(=([^&#]*)|&|#|$)/.exec(d.location.href)) &&
+                    q[2] && (h = q[2], w = z("vl-" + h)); var f = z("vl-cep"), b = location[g]; if ("savedCep" === B && f && (!h || "undefined" === typeof h) && 0 > b.indexOf("cep=")) { var e = -1 < b.indexOf("?") ? "&" : "?"; b += e + f } a = c.createElement("script"); n = c.scripts[0]; a.defer = 1; a.src = v + (-1 === v.indexOf("?") ? "?" : "&") + "lpref=" + l(c.referrer) + "&lpurl=" + l(b) + "&lpt=" + l(c.title) + "&vtm=" + (new Date).getTime() + (w ? "&uw=no" : ""); a[A] = function () { for (m = 0; a = c[t][m++];)/dtpCallback\.l/.test(a[g]) && (a[g] = decodeURIComponent(a[g]).match(/dtpCallback\.l="([^"]+)/)[1]); y() };
+                n.parentNode.insertBefore(a, n); h && C("vl-" + h, "1", x)
+            }, 0), setTimeout(y, 7E3))
+        })(window, document, localStorage, encodeURIComponent, "onreadystatechange", "links", "href", "className", "onerror", "dtpCallback", 0, "https://trk.mein-derila.de/d/.js", "savedCep");
+    </script>
+    <noscript>
+        <link href="https://trk.mein-derila.de/d/.js?noscript=true&lpurl=" rel="stylesheet" />
+    </noscript>
+
+    <!-- Hotjar Tracking Code for Site 6474202 (name missing) -->
+    <script>
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+            h._hjSettings = { hjid: 6474202, hjsv: 6 };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script'); r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
 </body>
 
 </html>
