--- a/schnarchen/index.html
+++ b/schnarchen/index.html
@@ -23,6 +23,14 @@
 
 
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
+
+        body {
+            font-family: 'Open Sans', sans-serif;
+            color: #333;
+            line-height: 1.6;
+        }
+
         .highlight-box {
             background-color: #f8fafc;
             border-left: 4px solid #3b82f6;
