--- a/schnarchen/index.html
+++ b/schnarchen/index.html
@@ -90,7 +90,7 @@
     </noscript>
 </head>
 
-<body class="font-sans text-gray-800 leading-relaxed">
+<body>
 
     <div class="w-full mx-auto text-center py-1" style="background-color: #000000">
         <p><span style="color: rgb(179, 182, 183);">Advertorial</span><br class="softbreak"></p>
